--- a/PotterShoppingCart/PotterShoppingCart.csproj
+++ b/PotterShoppingCart/PotterShoppingCart.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book.cs" />
+    <Compile Include="Cart.cs" />
     <Compile Include="CartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
